--- a/Ujjawal/index.html
+++ b/Ujjawal/index.html
@@ -4,27 +4,21 @@
 	<title>Books</title>
 </head>
 <body ng-app="myModule" >
-	 <input type="text" ng-model="searchText">
-     <button ng-click="serach()">Search</button>
-     <div ng-repeat="book in Books">
-        <h1>{{book.Title|uppercase}}</h1>
-        <p>{{book.Description}}</p>
-        <img src="{{book.Image}}" alt="">
-    </div>
 	<ng-view></ng-view>
 
 </body>
-<script src="js/angular.min.js"></script>
-<script src="js/angular.route.min.js"></script>
+<script src="assets/js/angular.js"></script>
+<script src="assets/js/angular-route.min.js"></script>
 <script>
    var app= angular.module("myModule",["ngRoute"]);
 
     
     app.config(function($routeProvider){
     $routeProvider.when("/",{
-    	templateUrl:"template/hello.html",
-    	controller:function($scope,$routeProvider,$http){
+    	templateUrl:"templates/bookSearch.html",
+    	controller:function($scope,$route,$http){
     		$scope.search=function(){
+                console.log("asda");
     			$http.get("http://it-ebooks-api.info/v1/search/"+$scope.searchText).then(function success (done){
                 console.log("Thank You");
                 console.log(done);
